Add dashboard ap

--- a/notebooks/ManyRuns.ipynb
+++ b/notebooks/ManyRuns.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "huc = '170200090101'"
+    "huc = '170200090101' ## Chelan, maritime"
    ]
   },
   {
@@ -63,7 +63,44 @@
    "execution_count": 3,
    "id": "d149ff18-f175-4fb9-82c3-0164ee14565e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'hidden_size': 64,\n",
+       " 'num_class': 1,\n",
+       " 'num_layers': 1,\n",
+       " 'dropout': 0.5,\n",
+       " 'learning_rate': 0.001,\n",
+       " 'n_epochs': 10,\n",
+       " 'lookback': 180,\n",
+       " 'batch_size': 32,\n",
+       " 'n_steps': 1,\n",
+       " 'num_workers': 8,\n",
+       " 'var_list': ['mean_pr', 'mean_tair'],\n",
+       " 'expirement_name': 'MultipleRunsSameHuc',\n",
+       " 'loss_type': 'mse',\n",
+       " 'mse_lambda_start': 1,\n",
+       " 'mse_lambda_end': 0.5,\n",
+       " 'train_size_dimension': 'time',\n",
+       " 'train_size_fraction': 0.67,\n",
+       " 'mlflow_tracking_uri': 'arn:aws:sagemaker:us-west-2:677276086662:mlflow-tracking-server/dawgsML',\n",
+       " 'recursive_predict': False,\n",
+       " 'lag_days': 30,\n",
+       " 'lag_swe_var_idx': 3,\n",
+       " 'filter_dates': ['1984-10-01', '2021-09-30'],\n",
+       " 'custom delta': 0.04,\n",
+       " 'UCLA': False,\n",
+       " 'Stop_Loss': False,\n",
+       " 'KGE_target': 0.9,\n",
+       " 'MLFLOW_ON': True}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# set hyperparams\n",
     "# load base line params \n",
@@ -79,7 +116,7 @@
     "params[\"train_size_fraction\"] = .67\n",
     "params[\"recursive_predict\"] = False \n",
     "params[\"UCLA\"] = False # start w/ UA data then update \n",
-    "#params"
+    "params"
    ]
   },
   {
@@ -92,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "6fd59871-6c73-476c-9fed-4080c8026866",
    "metadata": {},
    "outputs": [],
@@ -110,7 +147,7 @@
     "   \n",
     "    for epoch in range(params[\"n_epochs\"]):\n",
     "        # for local training, call fine_tune instead of pre_train\n",
-    "        #print(f\"Training in epoch {epoch}\")\n",
+    "        print(f\"Training in epoch {epoch}\")\n",
     "        LSTM_tr.fine_tune(\n",
     "            model_dawgs,\n",
     "            optimizer_dawgs,\n",
@@ -204,135 +241,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "54e2ef67-5b78-49b8-8d29-04978cf1a9b4",
+   "execution_count": 19,
+   "id": "68220060-4e48-42ef-8a80-000c452490c5",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mdict\u001b[39m, df, _ \u001b[38;5;241m=\u001b[39m run_one(huc, params)\n",
-      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 3)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training in epoch 0\n",
+      "Training in epoch 1\n",
+      "Training in epoch 2\n",
+      "Training in epoch 3\n",
+      "Training in epoch 4\n",
+      "Training in epoch 5\n",
+      "Training in epoch 6\n",
+      "Training in epoch 7\n",
+      "Training in epoch 8\n",
+      "Training in epoch 9\n"
      ]
     }
    ],
    "source": [
-    "dict, df, _ = run_one(huc, params)"
+    "results = run_one(huc, params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d62f388-2d51-4861-a5e7-0356ba20da81",
+   "execution_count": 20,
+   "id": "9cf564c0-7a84-42bf-90f6-f2e248057e04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'test_UA_mse': 0.009720983,\n",
+       " 'test_UA_kge': 0.9385536544028658,\n",
+       " 'test_UA_r2': 0.9444973777293773,\n",
+       " 'test_UA_mae': 0.06340153}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f72acd3e-0ffe-45af-8aed-18fa73fa590a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
+    "results"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0a55c8c6-dc2a-4adc-8901-6a10ccaa70e5",
+   "id": "5d77f2f7-8ea6-4911-a1ab-726f4d234381",
    "metadata": {},
    "source": [
-    "# Step 4 Loop through all the tum hucs"
+    "# Now Try The Module "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "19033cb3-fb7d-404d-9423-c4e7f22a51fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from snowML.Scripts import multi_run_single_huc as mrsh\n",
+    "import importlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1a16198e-7f4b-4b14-bb8d-68908b230f14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'snowML.Scripts.multi_run_single_huc' from '/home/suetboyd/Capstone/SnowML/src/snowML/Scripts/multi_run_single_huc.py'>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importlib.reload(mrsh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a1463cb9-8b29-4d29-a2c6-e9b9f905b759",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/suetboyd/miniconda3/lib/python3.11/site-packages/torch/nn/modules/rnn.py:123: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.5 and num_layers=1\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0\n",
+      "evaluating on huc 170200090101\n",
+      "test_mse: 0.04752444848418236\n",
+      "test_kge: 0.846424696822091\n",
+      "test_r2: 0.728655864644969\n",
+      "test_mae: 0.15049424767494202\n",
+      "train_mse: 0.057158514857292175\n",
+      "train_kge: 0.8164002698266688\n",
+      "train_r2: 0.6847067845297408\n",
+      "train_mae: 0.1590631902217865\n",
+      "Epoch 1\n",
+      "evaluating on huc 170200090101\n",
+      "test_mse: 0.026343023404479027\n",
+      "test_kge: 0.9238446355859425\n",
+      "test_r2: 0.8495926910831191\n",
+      "test_mae: 0.10974498838186264\n",
+      "train_mse: 0.03684147819876671\n",
+      "train_kge: 0.895491638441111\n",
+      "train_r2: 0.7967779667238732\n",
+      "train_mae: 0.12370743602514267\n",
+      "Epoch 2\n",
+      "evaluating on huc 170200090101\n",
+      "test_mse: 0.020172692835330963\n",
+      "test_kge: 0.9077584150721032\n",
+      "test_r2: 0.884822614828817\n",
+      "test_mae: 0.09553276747465134\n",
+      "train_mse: 0.023958703503012657\n",
+      "train_kge: 0.8836893011589392\n",
+      "train_r2: 0.8678409154877746\n",
+      "train_mae: 0.10758419334888458\n",
+      "Epoch 3\n",
+      "evaluating on huc 170200090101\n",
+      "test_mse: 0.015524337999522686\n",
+      "test_kge: 0.9412891702763703\n",
+      "test_r2: 0.9113627164450626\n",
+      "test_mae: 0.0756797045469284\n",
+      "train_mse: 0.02272115647792816\n",
+      "train_kge: 0.9135775618437659\n",
+      "train_r2: 0.8746673625706548\n",
+      "train_mae: 0.09568458795547485\n",
+      "Epoch 4\n",
+      "evaluating on huc 170200090101\n",
+      "test_mse: 0.01772957667708397\n",
+      "test_kge: 0.9416095142858909\n",
+      "test_r2: 0.8987717596988376\n",
+      "test_mae: 0.08152320235967636\n",
+      "train_mse: 0.022177359089255333\n",
+      "train_kge: 0.9331651238298716\n",
+      "train_r2: 0.8776670221059945\n",
+      "train_mae: 0.09399514645338058\n",
+      "Epoch 5\n",
+      "evaluating on huc 170200090101\n",
+      "test_mse: 0.016386007890105247\n",
+      "test_kge: 0.8971729793638851\n",
+      "test_r2: 0.906442962340899\n",
+      "test_mae: 0.0801292434334755\n",
+      "train_mse: 0.01419117208570242\n",
+      "train_kge: 0.9435737299767518\n",
+      "train_r2: 0.9217197843346868\n",
+      "train_mae: 0.07479707151651382\n",
+      "Epoch 6\n",
+      "evaluating on huc 170200090101\n",
+      "test_mse: 0.01762315258383751\n",
+      "test_kge: 0.9394653728395891\n",
+      "test_r2: 0.8993793999046347\n",
+      "test_mae: 0.08296354115009308\n",
+      "train_mse: 0.009663435630500317\n",
+      "train_kge: 0.9563407397302273\n",
+      "train_r2: 0.946695333035874\n",
+      "train_mae: 0.06047012284398079\n",
+      "Epoch 7\n",
+      "evaluating on huc 170200090101\n",
+      "test_mse: 0.01410937774926424\n",
+      "test_kge: 0.9514047581352054\n",
+      "test_r2: 0.9194415345232394\n",
+      "test_mae: 0.07497686892747879\n",
+      "train_mse: 0.008692431263625622\n",
+      "train_kge: 0.9509452810676898\n",
+      "train_r2: 0.9520515003087255\n",
+      "train_mae: 0.0585310123860836\n",
+      "Epoch 8\n",
+      "evaluating on huc 170200090101\n",
+      "test_mse: 0.01986660808324814\n",
+      "test_kge: 0.9094270939651318\n",
+      "test_r2: 0.8865702294602337\n",
+      "test_mae: 0.0830937847495079\n",
+      "train_mse: 0.014681380242109299\n",
+      "train_kge: 0.8839517226157239\n",
+      "train_r2: 0.919015737348412\n",
+      "train_mae: 0.0702134519815445\n",
+      "Epoch 9\n",
+      "evaluating on huc 170200090101\n",
+      "test_mse: 0.017223931849002838\n",
+      "test_kge: 0.9092803592121643\n",
+      "test_r2: 0.901658775889191\n",
+      "test_mae: 0.08032221347093582\n",
+      "train_mse: 0.012052785605192184\n",
+      "train_kge: 0.8551491495769864\n",
+      "train_r2: 0.9335153788990351\n",
+      "train_mae: 0.06656501442193985\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.8551491495769864,\n",
+       " {'test_mse': 0.017223932,\n",
+       "  'test_kge': 0.9092803592121643,\n",
+       "  'test_r2': 0.901658775889191,\n",
+       "  'test_mae': 0.08032221})"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mrsh.run_multi_exp(huc, params)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8715950-f071-4d4a-bdc0-a74718e127ef",
+   "id": "8b71ecfb-6ea1-4d1d-a49c-46379369fbc2",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_results = None\n",
-    "count = 0\n",
-    "\n",
-    "for huc in hucs_tum:    \n",
-    "    count += 1\n",
-    "    print(f\"processing huc {count}\")\n",
-    "    dict, df = run_all(huc, params)\n",
-    "    f_out = f\"model_results_UA_UCLA_huc_{huc}\"\n",
-    "    b = \"snowml-results\"\n",
-    "    du.dat_to_s3(df, b, f_out, file_type=\"csv\")\n",
-    "    new_row = pd.DataFrame([dict])\n",
-    "    new_row[\"huc\"] = huc\n",
-    "    \n",
-    "    if df_results is None:\n",
-    "        df_results = new_row\n",
-    "    else:\n",
-    "        df_results = pd.concat([df_results, new_row], ignore_index=True)\n",
-    "\n",
-    "df_results.set_index(\"huc\", inplace=True)\n",
-    "f_out = \"metrics_UA_v_UCLA_maritime\"\n",
-    "du.dat_to_s3(df_results, b, f_out, file_type=\"csv\")\n",
-    "df_results\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85b838d9-06c7-4748-8786-67e6db3f5ff7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_results[\"kge_diff\"] = df_results[\"test_UA_kge\"] - df_results[\"test_UCLA_kge\"]\n",
-    "df_results.head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44e1a943-0e52-48ea-8b7a-461db9c6d662",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_results.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8e7d499-053c-413d-9d7c-d43883bffb35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_sorted = df_results.sort_values(by=\"kge_diff\", ascending=False)\n",
-    "df_sorted.head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0d9c609-47d7-461f-8745-c75e125d52c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# with mlflow.start_run():\n",
-    "        #ml.set_ml_server(params)\n",
-    "        # log all the params\n",
-    "        #mlflow.log_params(params)\n",
-    "        # log the hucs & train size fraction\n",
-    "        #mlflow.log_param(\"hucs\", hucs)\n",
-    "        # log the model\n",
-    "        #mlflow.pytorch.log_model(model_dawgs, artifact_path=f\"model_{huc}\", pickle_module=cloudpickle)\n",
-    "        #mlflow.pytorch.log_model(model_dawgs, artifact_path=f\"model_{huc}\")\n",
-    "            "
-   ]
+   "source": []
   }
  ],
  "metadata": {
