Add proptotype dashboard

--- a/src/snowML/dashboard/Dashboard_Scratch.ipynb
+++ b/src/snowML/dashboard/Dashboard_Scratch.ipynb
@@ -412,7 +412,7 @@
     "s3 = boto3.client(\"s3\")\n",
     "\n",
     "def model_from_MLflow(uri): \n",
-    "    model = load_model(uri)\n",
+    "    model = evaluate.load_model(uri)\n",
     "\n",
     "def model_to_s3(model, model_name, bucket_name = \"snowml-dashboard\"): \n",
     "    file_name = f\"{model_name}.pth\"\n",
@@ -491,7 +491,7 @@
    ],
    "source": [
     "# Retrieve Model To USe for MultiTraining \n",
-    "multi_huc_model_uri = \"s3://sues-test/298/a6c611d4c4cf410e9666796e3a8892b7/artifacts/epoch29_model\"\n",
+    "multi_huc_model_uri = \"s3://sues-test/298/a6c611d4c4cf410e9666796e3a8892b7/artifacts/epoch9_model/data\"\n",
     "model_name = \"Multi_Huc_Trained\"\n",
     "model = evaluate.load_model(multi_huc_model_uri)"
    ]
@@ -527,7 +527,7 @@
    "source": [
     "# Retrieve Params from ML flow \n",
     "tracking_uri = \"arn:aws:sagemaker:us-west-2:677276086662:mlflow-tracking-server/dawgsML\"\n",
-    "run_id = \"51884b406ec545ec96763d9eefd38c36\"\n",
+    "run_id = \"a6c611d4c4cf410e9666796e3a8892b7\"\n",
     "params = evaluate.get_params(tracking_uri, run_id)"
    ]
   },
@@ -545,7 +545,68 @@
    "id": "0d353f42-3c4c-4a61-907e-b88282dbbf71",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"Module to Save PreTrained Model Data to S3 for Use in Dashabord\"\"\"\n",
+    "# pylint: disable=C0103\n",
+    "\n",
+    "import os\n",
+    "import json\n",
+    "#import mlflow\n",
+    "#import mlflow.pytorch\n",
+    "import torch\n",
+    "import boto3\n",
+    "#from snowML.datapipe import to_model_ready as mr\n",
+    "from snowML.LSTM import LSTM_evaluate as evaluate\n",
+    "from snowML.LSTM import LSTM_pre_process as pp\n",
+    "\n",
+    "s3 = boto3.client(\"s3\")\n",
+    "\n",
+    "def model_from_MLflow(uri):\n",
+    "    model = evaluate.load_model(uri)\n",
+    "    return model\n",
+    "\n",
+    "def model_to_s3(model, model_name, bucket_name = \"snowml-dashboard\"):\n",
+    "    file_name = f\"{model_name}.pth\"\n",
+    "    torch.save(model.state_dict(), file_name)\n",
+    "    s3.upload_file(file_name, bucket_name, f\"models/{file_name}\")\n",
+    "    os.remove(file_name)\n",
+    "    return file_name\n",
+    "\n",
+    "def params_to_s3(params, model_name, bucket_name = \"snowml-dashboard\"):\n",
+    "    params_file = f\"{model_name}_params.json\"\n",
+    "    with open(params_file, \"w\") as f:\n",
+    "        json.dump(params, f, indent=2)\n",
+    "    s3.upload_file(params_file, bucket_name, f\"models/{params_file}\")\n",
+    "    os.remove(params_file)\n",
+    "\n",
+    "def norms_to_s3(g_means, g_stds, model_name, bucket_name = \"snowml-dashboard\"):\n",
+    "    g_means = g_means.to_dict()\n",
+    "    g_stds = g_stds.to_dict()\n",
+    "    means_file = f\"{model_name}_means.json\"\n",
+    "    with open(means_file, \"w\") as f:\n",
+    "        json.dump(g_means, f, indent=2)\n",
+    "    s3.upload_file(means_file, bucket_name, f\"models/{means_file}\")\n",
+    "    os.remove(means_file)\n",
+    "    std_file = means_file = f\"{model_name}_stds.json\"\n",
+    "    with open(std_file, \"w\") as f:\n",
+    "        json.dump(g_stds, f, indent=2)\n",
+    "    s3.upload_file(std_file, bucket_name, f\"models/{std_file}\")\n",
+    "    os.remove(std_file)\n",
+    "    \n",
+    "\n",
+    "def get_norm(params):\n",
+    "    huc_list_all_tr = params[\"train_hucs\"] + params[\"val_hucs\"]\n",
+    "    _, global_means, global_stds = pp.pre_process(huc_list_all_tr, params[\"var_list\"])\n",
+    "    return global_means, global_stds\n",
+    "\n",
+    "\n",
+    "def save_all_model_data(model_uri, model_name, tracking_uri, run_id):\n",
+    "    model = evaluate.load_model(model_uri)\n",
+    "    model_to_s3(model, model_name)\n",
+    "    params = evaluate.get_params(tracking_uri, run_id)\n",
+    "    params_to_s3(params, model_name)\n",
+    "    return params\n"
+   ]
   }
  ],
  "metadata": {
